fix card image spacing for bigger devices by providing min-content

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@
 
 .card-container {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: min-content 2fr 1fr;
   column-gap: 10px;
   max-width: 100%;
   align-items: start;
