--- a/src/output.css
+++ b/src/output.css
@@ -666,6 +666,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -688,10 +692,6 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.ml-auto {
-  margin-left: auto;
 }
 
 .block {
@@ -900,10 +900,6 @@ video {
 
 .justify-self-start {
   justify-self: start;
-}
-
-.justify-self-end {
-  justify-self: end;
 }
 
 .overflow-hidden {
@@ -1165,7 +1161,7 @@ video {
 
 .card-container {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: min-content 2fr 1fr;
   -moz-column-gap: 10px;
        column-gap: 10px;
   max-width: 100%;
